remove overflow-y: scroll from comment table to fix bug

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -184,7 +184,6 @@ body {
 
 .modal-post-show .comment-table {
   max-height: 397px;
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
